replace tomcat to jetty